fix: layout shift for empty dir

--- a/pages/files/Files.less
+++ b/pages/files/Files.less
@@ -2,7 +2,7 @@
   flex-grow: 1;
   display: grid;
   grid-template-columns: auto 288px;
-  grid-template-rows: min-content min-content max-content;
+  grid-template-rows: min-content min-content 1fr;
   gap: @normal-spacing;
   grid-auto-flow: row;
   grid-template-areas:
